Changelog
=========

6.2-dev - (unreleased)
----------------------
* Bug fix: re added moreLink logic for document_relateditems.pt 
  [ichimdav #13994]
* Bug fix: Keep consistency in AutoRelations adapter returning values
  [voineali]
* Bug fix: Chnage the trnaslation domain from eea to eea.notranslation on
  gis_view.pt.
  [prospchr refs #13770]

6.1 - (2013-02-25)
------------------
* Change: optimized smartfolder.py logic responsible for latest events popup
  from cross_site_top
  [ichimdav #13771]
* Change: optimized sameTypeByTheme which is responsible for the latest
  addition portlet logic
  [ichimdav #13771]
* Change: optimized autoContext relations which is called on video_popup_view
  [ichimdav #13771]
* Bug fix: getattr isCanonical for the relations canonical check to avoid
  portal_relations error
  [ichimdav]
* Change: disabled eea_keywords macro setting for subject since we already
  provide a different macro with the eea.tags widget
  [ichimdav #13771]
* Change: removed copying of schema to speed up schema modifier which sets a
  different widget for location, themes and subject
  [ichimdav #13771]
* Bug fix: fix css for resource reordering page
  [tiberich #10231]
* Bug fix: Corrected missing i18n attributes for translations.
  [prospchr refs #13827]
* Bug fix: Added domain=eea.notranslation to views that don't need
  translations.
  [prospchr refs #13827]

6.0 - (2013-02-05)
------------------
* Bug fix: bring back initialization code for EEAContentTypes. Fixes
  eea.themecentre tests
  [tiberich]
* Bug fix: Corrected errors in code.
* Bug Fix: Removed the possibility to edit relations for translated objects.
  [prospchr refs #9569]
* Upgrade step: Need to run the script that remove the relations
  on translated objects:
  - Check that the back-up has been done :-)
  - In the ZMI, go to 0maintenance
  - Add an External Method, call it clean_relations_of_translated_items
    Module name: Products.EEAPloneAdmin.clean_relations_of_translated_items